--- a/src/app/shared/ui/fields/input/input.component.html
+++ b/src/app/shared/ui/fields/input/input.component.html
@@ -9,11 +9,14 @@
     </ng-container>
 
     <ng-container [ngSwitch]="type">
+      <!-- textarea -->
       <textarea *ngSwitchCase="'textarea'" class="field" [class.field--soft]="soft" [class.is-invalid]="invalid"
         [id]="id" [attr.placeholder]="placeholder || null" [attr.aria-invalid]="invalid || null"
         [attr.aria-describedby]="joinIds(helpId, invalid ? errId : null)" [readonly]="readonly || null"
-        [autocomplete]="autocomplete || null" [formControlName]="controlName" rows="3"></textarea>
+        [autocomplete]="autocomplete || null" [formControlName]="controlName" rows="3">
+      </textarea>
 
+      <!-- input -->
       <input *ngSwitchDefault class="field" [class.field--soft]="soft" [class.is-invalid]="invalid" [id]="id"
         [attr.type]="type" [formControlName]="controlName" [attr.aria-invalid]="invalid || null"
         [attr.aria-describedby]="joinIds(helpId, invalid ? errId : null)" [readonly]="readonly || null"
@@ -29,5 +32,7 @@
   </div>
 
   <small *ngIf="hint" class="form-help" [id]="helpId">{{ hint }}</small>
-  <small *ngIf="invalid" class="form-error" [id]="errId">{{ msgForError() }}</small>
+  <small *ngIf="invalid" class="form-error" [id]="errId" aria-live="polite">
+    {{ msgForError() }}
+  </small>
 </label>
